# excel-tasks-processer

./: .env.example  .gitignore  README.md  app_config.py  config.py  data_loader.py  errors.py  pyproject.toml  report_builder.py  requirements.txt  transformer.py  validators.py
.cursor/rules/: project-context.mdc
config/: canonical_schema.yaml  report_definitions.yaml  smart_mode.yaml  template_mapping.yaml
config/mapping_presets/: default.json
docs/: PROJECT_CONTEXT.md  SMART_MODE_SPEC_zh-TW.md  USER_GUIDE_zh-TW.md
report_desktop_app/: README.md  main.py  pyinstaller.spec  requirements-dev.txt  requirements.txt
report_desktop_app/app/: __init__.py
report_desktop_app/docs/: PACKAGING.md  UI_TODO.md
report_desktop_app/scripts/: build_desktop.ps1  capture_ui_screenshot.py
report_desktop_app/tests/: test_app_controller.py  test_batch_report.py  test_config.py  test_consolidation_service.py  test_dates.py  test_excel_clear.py  test_file_name_filter.py  test_folder_import.py  test_mapping_utils.py  test_merge_advisor.py  test_pipeline_runner.py  test_range_presets.py  test_range_spec.py  test_reconcile_hints.py  test_reconcile_service.py  (+14 more)
reporting/: __init__.py  config_loader.py  models.py  pipeline.py
scripts/: run_desktop.ps1
templates/: README.md
tests/: conftest.py  test_aggregation.py  test_core_dates.py  test_core_filenames.py  test_core_safe_io.py  test_export.py  test_mapping.py  test_pipeline_preloaded.py  test_report_builder.py  test_transform.py  test_transform_skip_normalize.py  test_transformer.py  test_validation.py  test_validators.py
(+103 files in other folders)
