[project]
name = "securities-reporting"
version = "0.2.0"
description = "Internal securities accounting Excel reporting (desktop + reporting core)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
desktop = ["PySide6>=6.6"]
dev = ["pytest>=8.0", "pyinstaller>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = ["report_desktop_app", "agent-transcripts", "mcps", ".cursor"]
